perfect routing for future use

--- a/ninja-directory/src/app/app.component.html
+++ b/ninja-directory/src/app/app.component.html
@@ -4,8 +4,8 @@
   </h1>
   <nav>
     <ul>
-      <li><a href="/home">home</a></li>
-      <li><a href="/directory">directory</a></li>
+      <li><a [routerLink]="['home']">home</a></li>
+      <li><a [routerLink]="['directory']">directory</a></li>
     </ul>
   </nav>
 </header>
