--- a/ninja-directory/src/app/home/home.component.html
+++ b/ninja-directory/src/app/home/home.component.html
@@ -2,8 +2,8 @@
   home works!
   {{homeTitle}}
 </p>
-
-<input type="text" [(ngModel)]="ninjas.name"/>
-<p>{{ninja.name}}</p>
+<!-- 
+<input type="text" [(ngModel)]="ninjas"/>
+<p>{{ninja.name}}</p> -->
 
 <button (click)="fireYellEvent($event)"> Hit Me</button>
